--- a/style.css
+++ b/style.css
@@ -18,12 +18,16 @@ body{
     margin: 0px;
     background-color: rgba(231, 206, 255, 0.5);
     gap: 10px;
-    width: 250px;
-    height: 600px;
+    width: auto;
+    height: 100%;
 }
 .corpo{
+    display: flex;
+    flex-flow: column;
     background-color: rgb(0, 0, 0);
     padding: 5px;
+    width: 99vw;
+    height: 99vh;
 }
 .linha{
     display: flex;
