--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body{
 }
 header {
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
-    background: #fff;
+    /* background: #fff; */
     position: fixed;
     width: 100%;
     max-width: 350px;
@@ -25,18 +25,26 @@ header {
     padding: 130px 5px;
     margin: 0px;
     /* background-color: rgba(231, 206, 255, 0.5); */
-    gap: 10px;
+    gap: 5px;
     width: auto;
     height: 100%;
+}
+#titulo{
+    display: flex;
+    flex-flow: row;
+    justify-content: center;
+    color:rgb(240, 248, 255);
+    padding: 3px;
+    background-color: rgb(8, 107, 255);
 }
 .corpo{
     display: flex;
     flex-flow: column;
-    background-color: rgb(25, 182, 255);
+    /* background-color: rgb(25, 182, 255); */
     padding: 0px;
     width: 99vw;
-    height: 100%;
-    min-height: 100vh;
+    /* height: 100%;
+    min-height: 100vh; */
     max-width: 350px;
 }
 .linha{
@@ -62,7 +70,7 @@ header {
     font: 28px Verdana, Arial, sans-serif;
 
     padding: 5px;
-    width:250px;
+    width:240px;
     height: 30px;
     overflow:hidden;
     resize:none;
@@ -93,5 +101,6 @@ button{
     background: url(img/plus.svg);
     background-position: center; /* Center the image */
     background-size: 40px;
-    background-repeat: no-repeat;
+    /* background-repeat: no-repeat; */
+    background-position-y: center;
 }
