--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body{
     margin: 0;
     flex-flow: row;
     justify-content: center;
-    background-color: rgb(8, 107, 255);
+    background-color: rgb(66, 66, 66);
     font-family: Arial, Helvetica, sans-serif;
     font-size: 25px;
     margin: 0;
@@ -27,7 +27,6 @@ header {
     /* background-color: rgba(231, 206, 255, 0.5); */
     gap: 5px;
     width: auto;
-    height: 100%;
 }
 #titulo{
     display: flex;
@@ -35,16 +34,13 @@ header {
     justify-content: center;
     color:rgb(240, 248, 255);
     padding: 3px;
-    background-color: rgb(8, 107, 255);
+    background-color: rgb(66, 66, 66);
 }
 .corpo{
     display: flex;
     flex-flow: column;
-    /* background-color: rgb(25, 182, 255); */
     padding: 0px;
     width: 99vw;
-    /* height: 100%;
-    min-height: 100vh; */
     max-width: 350px;
 }
 .linha{
@@ -52,14 +48,15 @@ header {
     flex-flow: row;
     justify-content: center;
     padding: 3px;
-    background-color: aqua;
+    background-color: rgb(45, 188, 188);
     height: 43px;
     width:98%;
 
 }
 .item{
     padding: 3px 10px;
-    background-color: rgba(255, 255, 255, 0.447);
+    background-color: rgb(83, 83, 83);
+    color: rgb(230, 245, 230);
 }
 .inputtask{
     background-color: aliceblue;
@@ -99,7 +96,7 @@ button{
     margin: 3px;
     width: 40px;
     background: url(img/plus.svg);
-    background-position: center; /* Center the image */
+    background-position-x: center; /* Center the image */
     background-size: 40px;
     /* background-repeat: no-repeat; */
     background-position-y: center;
