--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body{
     margin: 0;
     padding: 0 0;
     gap: 5px;
+    height: 50%;
 }
 header {
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
@@ -87,17 +88,21 @@ header {
     border-radius: 4px;
     background-color: #f8f8f8;
     font-size: 16px;
-    resize: none;
+    resize: none;.
 } */
-button{
+.button{
     opacity: 0.5;
     border: 3px solid black;
     border-radius: 13px;
     margin: 3px;
-    width: 40px;
     background: url(img/plus.svg);
     background-position-x: center; /* Center the image */
-    background-size: 40px;
-    /* background-repeat: no-repeat; */
+    background-size: 10px; */
+    background-repeat: no-repeat;
     background-position-y: center;
+    font: 25px Arial, sans-serif;
+    background-color: rgb(59, 244, 244);
+}
+#add{
+    width:40px;
 }
