--- a/style.css
+++ b/style.css
@@ -59,8 +59,10 @@ footer{
     flex-flow: column;
     padding: 0px;
     width: 99vw;
-    height: 99vh;
+    min-height: 50vh;
+    max-height: 99vh;
     max-width: 350px;
+    box-shadow: inset 0 0 8px 2px rgba(45, 188, 188, 0.592);
 }
 .linha{
     display: flex;
@@ -98,7 +100,7 @@ footer{
 textarea:focus {
     outline: none !important;
     border: 3px solid rgb(8, 81, 81);
-    box-shadow: 0 0 2px #0b32078b;
+    box-shadow: 0 0 1px 1px #0b320768;
   }
 .done{
     text-decoration: line-through;
@@ -124,6 +126,11 @@ textarea:focus {
     margin: 3px;
     font: 25px Arial, sans-serif;
     background-color: rgb(59, 244, 244);
+    box-shadow: 1px 1px 1px 1px #0b32078b;
+}
+.button:hover{
+    border: 3px solid rgb(55, 55, 55);
+    background-color: rgb(178, 255, 255);
 }
 img{
     width:100px;
@@ -131,10 +138,10 @@ img{
 #add{
     width: 40px;
     font: 25px Arial, sans-serif;
-    background: url(img/plus.svg);
+    /* background: url(img/plus.svg);
     overflow: visible;
-    background-position-x: center; /* Center the image hfg   */
+    background-position-x: center; /* Center the image hfg  
     background-size: 40px;
     background-repeat: no-repeat;
-    background-position-y: center; 
+    background-position-y: center;  */
 }
