--- a/style.css
+++ b/style.css
@@ -5,12 +5,13 @@ body{
     flex-flow: row;
     justify-content: center;
     background-color: rgb(66, 66, 66);
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Verdana ,Arial, Helvetica, sans-serif;
     font-size: 25px;
     margin: 0;
     padding: 0 0;
     gap: 5px;
     height: 50%;
+    --border-color: rgb(45, 188, 188);
 }
 header {
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
@@ -19,7 +20,7 @@ header {
     width: 100%;
     max-width: 350px;
     top: 0;
-    background-color: rgb(45, 188, 188);
+    background-color: var(--border-color);
     color: rgb(8, 81, 81);
 }
 main{
@@ -62,7 +63,7 @@ footer{
     min-height: 50vh;
     max-height: 99vh;
     max-width: 350px;
-    box-shadow: inset 0 0 8px 2px rgba(45, 188, 188, 0.592);
+    box-shadow: inset 0 0 4px 1px rgba(45, 188, 188, 0.592);
 }
 .linha{
     display: flex;
@@ -79,17 +80,20 @@ footer{
     text-align: center;
 }
 .item{
+    display: flex;
+    flex-flow: row;
     padding: 5px 15px;
     background-color: rgb(83, 83, 83);
     /* color: rgb(230, 245, 230); */
 }
 .inputtask{
     background-color: rgb(186, 243, 243);
-    border: 3px solid rgb(8, 81, 81);
+    border: 2px solid rgb(8, 81, 81);
     border-radius: 15px;
     color: rgb(87, 87, 87);
     text-align: center;
-    font: 26px Verdana, Arial, sans-serif;
+    font: 26px 'drip',Verdana, Arial, sans-serif;
+    box-shadow: 1px 1px 1px 1px #0b320768;
 
     padding: 5px;
     width:240px;
@@ -97,9 +101,12 @@ footer{
     overflow:hidden;
     resize:none;
 }
+.dragging{
+    opacity: 50%;
+}
 textarea:focus {
     outline: none !important;
-    border: 3px solid rgb(8, 81, 81);
+    border: 2px solid rgb(8, 81, 81);
     box-shadow: 0 0 1px 1px #0b320768;
   }
 .done{
@@ -120,28 +127,28 @@ textarea:focus {
     resize: none;.
 } */
 .button{
-    opacity: 0.5;
-    border: 3px solid black;
+    border: 2px solid rgb(8, 81, 81);;
     border-radius: 13px;
     margin: 3px;
     font: 25px Arial, sans-serif;
+    color: rgb(8, 81, 81);
     background-color: rgb(59, 244, 244);
     box-shadow: 1px 1px 1px 1px #0b32078b;
 }
 .button:hover{
-    border: 3px solid rgb(55, 55, 55);
+    border: 2px solid rgb(55, 55, 55);
     background-color: rgb(178, 255, 255);
 }
 img{
     width:100px;
 }
-#add{
+span{
+    text-decoration: none;
+    text-align: right;
+    width: 100%;
+    border: 3px solid red;
+}
+#add, #edit, #copy{
     width: 40px;
-    font: 25px Arial, sans-serif;
-    /* background: url(img/plus.svg);
-    overflow: visible;
-    background-position-x: center; /* Center the image hfg  
-    background-size: 40px;
-    background-repeat: no-repeat;
-    background-position-y: center;  */
+    font: 25px 'dripicons-v2', Arial, sans-serif;
 }
