--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ footer{
     padding: 0px;
     width: 99vw;
     min-height: 50vh;
-    max-height: 99vh;
+    /* max-height: 99vh; */
     max-width: 350px;
     box-shadow: inset 0 0 4px 1px rgba(45, 188, 188, 0.592);
 }
@@ -103,8 +103,8 @@ footer{
 }
 .dragging{
     opacity: 50%;
-    touch-action: none;
 }
+
 textarea:focus {
     outline: none !important;
     border: 2px solid rgb(8, 81, 81);
@@ -154,10 +154,11 @@ span{
     font: 25px 'dripicons-v2', Arial, sans-serif;
 }
 .del{
-    scale:0.7;
-    width: 30px;
-    height: 30px;
+    /* scale:0.9; */
+    width: 40px;
+    height: 40px;
     border-radius: 20px;
-    font: 15px 'dripicons-v2', Arial, sans-serif;
-    background-color: red;
+    padding: 0;
+    font: 20px 'dripicons-v2', Arial, sans-serif;
+    background-color: rgb(255, 72, 72);
 }
