--- a/style.css
+++ b/style.css
@@ -11,7 +11,8 @@ body{
     padding: 0 0;
     gap: 5px;
     height: 50%;
-    --border-color: rgb(45, 188, 188);
+    --bg-color: rgb(45, 188, 188);
+    --letra-color: rgb(8, 81, 81);
 }
 header {
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
@@ -20,8 +21,8 @@ header {
     width: 100%;
     max-width: 350px;
     top: 0;
-    background-color: var(--border-color);
-    color: rgb(8, 81, 81);
+    background-color: var(--bg-color);
+    color: var(--letra-color);
 }
 main{
     flex: 1 0 auto;
@@ -33,8 +34,8 @@ footer{
     /* position: fixed; */
     width: 100%;
     max-width: 350px;
-    background-color: rgb(45, 188, 188);
-    color: rgb(8, 81, 81);
+    background-color: var(--bg-color);
+    color:  var(--letra-color);
 }
 .mylist{
     display: flex;
@@ -53,7 +54,7 @@ footer{
     
     font: 30px Verdana, Arial, sans-serif;
     padding: 3px;
-    background-color: rgb(45, 188, 188);
+    background-color: var(--bg-color);
 }
 .corpo{
     display: flex;
