--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body{
     font-family: Verdana ,Arial, Helvetica, sans-serif;
     font-size: 25px;
     margin: 0;
-    padding: 0 0;
+    padding: 0;
     gap: 5px;
     height: 50%;
     --bg-color: rgb(45, 188, 188);
@@ -19,7 +19,7 @@ header {
     /* background: #fff; */
     position: fixed;
     width: 100%;
-    max-width: 350px;
+    max-width: 500px;
     top: 0;
     background-color: var(--bg-color);
     color: var(--letra-color);
@@ -33,15 +33,15 @@ footer{
     /* background: #fff; */
     /* position: fixed; */
     width: 100%;
-    max-width: 350px;
+    /* max-width: 500px; */
     background-color: var(--bg-color);
     color:  var(--letra-color);
 }
 .mylist{
     display: flex;
     flex-flow: column;
-    padding: 93px 5px 5px 5px;
-    margin: 0px;
+    padding: 93px 0px 0px 0px;
+    margin: 3px;
     /* background-color: rgba(231, 206, 255, 0.5); */
     gap: 5px;
     width: auto;
@@ -60,10 +60,10 @@ footer{
     display: flex;
     flex-flow: column;
     padding: 0px;
-    width: 99vw;
+    width: 100vw;
     min-height: 50vh;
     /* max-height: 99vh; */
-    max-width: 350px;
+    max-width: 500px;
     box-shadow: inset 0 0 4px 1px rgba(45, 188, 188, 0.592);
 }
 .linha{
@@ -83,7 +83,8 @@ footer{
 .item{
     display: flex;
     flex-flow: row;
-    padding: 5px 15px;
+    padding: 7px;
+    height: 40px;
     background-color: rgb(83, 83, 83);
     /* color: rgb(230, 245, 230); */
 }
@@ -93,7 +94,7 @@ footer{
     border-radius: 15px;
     color: rgb(87, 87, 87);
     text-align: center;
-    font: 26px 'drip',Verdana, Arial, sans-serif;
+    font: 26px Verdana, Arial, sans-serif;
     box-shadow: 1px 1px 1px 1px #0b320768;
 
     padding: 5px;
@@ -110,30 +111,36 @@ textarea:focus {
     outline: none !important;
     border: 2px solid rgb(8, 81, 81);
     box-shadow: 0 0 1px 1px #0b320768;
-  }
+}
 .done{
     text-decoration: line-through;
 }
 .hidden{
     display: none;
 }
-/* textarea{
-    /* width: 100%;
-    height: 150px;
-    padding: 0px 20px;
-    box-sizing: border-box;
-    border: 2px solid #ccc;
-    border-radius: 4px;
-    background-color: #f8f8f8;
-    font-size: 16px;
-    resize: none;.
-} */
+textarea{
+    background-color: rgb(186, 243, 243);
+    border: 2px solid rgb(8, 81, 81);
+    border-radius: 15px;
+    color: rgb(87, 87, 87);
+    text-align: center;
+    font: 15px Verdana, Arial, sans-serif;
+    box-shadow: 1px 1px 1px 1px #0b320768;
+
+    width: 100%;
+    height: 250px;
+
+    padding: 5px;
+    overflow:hidden;
+    resize:none;
+}
+textarea::placeholder {
+    line-height: 250px;
+}
 .button{
-    width: 40px;
-    height: 40px;
     border: 2px solid rgb(8, 81, 81);;
     border-radius: 13px;
-    margin: 3px;
+    margin: 0px 10px;
     font: 25px Arial, sans-serif;
     color: rgb(8, 81, 81);
     background-color: rgb(59, 244, 244);
@@ -150,32 +157,43 @@ span, .undone{
     text-align: left;
     width: 100%;
     /* border: 3px solid red; */
+    margin:0;
 }
-#add, #edit, #copy, .button{
+#add, #ordem, #copy, #lixo, #paste, #numerar{
     width: 40px;
+    height: 40px;
     font: 25px 'dripicons-v2', Arial, sans-serif;
 }
+.up, .down{
+    width: 40px;
+    background-color: bisque;
+    font: 25px 'dripicons-v2', Arial, sans-serif;
+    margin: 0px 5px;
+}
+
 .del{
     /* scale:0.9; */
-    width: 40px;
-    height: 35px;
+    width: 30px;
+    height: 30px;
     border-radius: 20px;
     padding: 0;
     font: 20px 'dripicons-v2', Arial, sans-serif;
-    background-color: rgb(255, 72, 72);
+    background-color: rgb(255, 91, 91);
 }
 .ordem{
     display:none;
     text-align: right;
+    /* scale:0.8; */
     /* border: 3px solid red; */
     width:150px;
 }
 .disabled{
     border: 2px solid rgb(8, 81, 81);;
     border-radius: 13px;
-    margin: 3px;
-    font: 25px 'dripicons-v2', Arial, sans-serif;
+    /* margin: 3px; */
+    font: 25px Arial, sans-serif;
     color: rgb(8, 81, 81);
     background-color: rgb(11, 42, 42);
+    font: 25px 'dripicons-v2', Arial, sans-serif;
     box-shadow: 1px 1px 1px 1px #0b32078b;
 }
