--- a/style.css
+++ b/style.css
@@ -84,7 +84,7 @@ footer{
     display: flex;
     flex-flow: row;
     padding: 7px;
-    height: 40px;
+    height: 35px;
     background-color: rgb(83, 83, 83);
     /* color: rgb(230, 245, 230); */
 }
@@ -96,6 +96,7 @@ footer{
     text-align: center;
     font: 26px Verdana, Arial, sans-serif;
     box-shadow: 1px 1px 1px 1px #0b320768;
+    margin: 0px 0px 0px 3px;
 
     padding: 5px;
     width:240px;
@@ -164,11 +165,12 @@ span, .undone{
     height: 40px;
     font: 25px 'dripicons-v2', Arial, sans-serif;
 }
+
 .up, .down{
     width: 40px;
     background-color: bisque;
     font: 25px 'dripicons-v2', Arial, sans-serif;
-    margin: 0px 5px;
+    margin: 2px;
 }
 
 .del{
@@ -185,7 +187,8 @@ span, .undone{
     text-align: right;
     /* scale:0.8; */
     /* border: 3px solid red; */
-    width:150px;
+    width:120px;
+    white-space: nowrap;
 }
 .disabled{
     border: 2px solid rgb(8, 81, 81);;
